force-app/main/default/objects/Question_Rule__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question ID</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Question Rules</relationshipLabel>
    <relationshipName>Question_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>