force-app/main/default/objects/Question_Rule__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <formula>Question_ID__r.Short_Text__c</formula>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>