force-app/main/default/objects/Question_Rule__c/fields/Registration_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Record_Type__c</fullName>
    <description>DO NOT USE - Use Registration_Type__c picklist field instead.</description>
    <label>Registration Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>