force-app/main/default/objects/Question_Rule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Define the order in which you want the questions to appear. Blank values will show last on the questionnaire section of the application</inlineHelpText>
    <label>Sort Order</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>