force-app/main/default/objects/Question_Rule__c/listViews/Talent_Agency_Question_Rules.listView-meta.xml
<ListView>
    <fullName>Talent_Agency_Question_Rules</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Question_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Talent Agency</value>
    </filters>
    <label>Talent Agency Question Rules</label>
</ListView>